# series

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  series.html  setup.cfg
.doctrees/: environment.pickle  index.doctree  series.doctree
docs/: conf.py  index.rst  series.rst
src/series/: __init__.py  series.py
test/: test_series.py
